Test Data/WSN/WSN-MELA-5/outputs/wsn-scso/2025-07-18_09-33-21/problem_iter2_stdout_2.txt
Traceback (most recent call last):
  File "C:\Users\22973\Desktop\meevo-main\meevo/evaluators/wsn/main.py", line 7, in <module>
    import gpt  # 自定义的启发式模块
    ^^^^^^^^^^
  File "C:\Users\22973\Desktop\meevo-main\meevo\evaluators\wsn\gpt.py", line 16
    elite = Positions[np.argmin([np.linalg.norm(p-Best_pos) for p in Positions])
                     ^
SyntaxError: '[' was never closed
